--- a/eq_plain_reports/views/report_sale_order_plain.xml
+++ b/eq_plain_reports/views/report_sale_order_plain.xml
@@ -3,7 +3,7 @@
 	<data>
 
 
-		<template id="external_layout_header_invoice_plain">
+		<template id="external_layout_header_sale_order_plain">
 			<div class="header">
 				<div class="row zero_min_height reportlogo" style="">
 					<div>
@@ -14,7 +14,7 @@
 							class="text-right"/> -->
 					</div>
 				</div>
-				<t t-call="equitania.eq_external_layout_header_invoice_data"/>
+				<t t-call="equitania.eq_external_layout_header_sale_order_data"/>
 				<div class="row zero_min_height" style="">
 					<t t-raw="0" />
 					<div class="col-xs-12">
@@ -27,14 +27,14 @@
 			<!-- <div class="header"> <span>mein neuer header</span> </div> -->
 		</template>
 
-		<template id="external_layout_invoice_plain">
+		<template id="external_layout_sale_order_plain">
 			<t t-if="o and 'company_id' in o">
 				<t t-set="company" t-value="o.company_id"></t>
 			</t>
 			<t t-if="not o or not 'company_id' in o">
 				<t t-set="company" t-value="res_company"></t>
 			</t>
-			<t t-call="eq_plain_reports.external_layout_header_invoice_plain" />
+			<t t-call="eq_plain_reports.external_layout_header_sale_order_plain" />
 			<t t-raw="0" />
 			<t t-call="eq_plain_reports.external_layout_footer_plain" />
 		</template>
@@ -42,26 +42,25 @@
 			<t t-call="equitania.report_invoice_data" /> </t> </template> -->
 
 
-		<template id="report_invoice_plain_document">
-			<t t-call="eq_plain_reports.external_layout_invoice_plain">
-				<t t-call="equitania.report_invoice_data" />
+		<template id="report_sale_order_plain_document">
+			<t t-call="eq_plain_reports.external_layout_sale_order_plain">
+				<t t-call="equitania.report_saleorder_data" />
 			</t>
 		</template>
 
-		<template id="report_invoice_plain">
+		<template id="report_sale_order_plain">
 			<!-- <t t-call="eq_plain_reports.html_container_plain"> -->
 			<t t-call="eq_plain_reports.html_container_plain">
 				<t t-foreach="doc_ids" t-as="doc_id">
 					<t
-						t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'eq_plain_reports.report_invoice_plain_document')" />
+						t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'eq_plain_reports.report_sale_order_plain_document')" />
 				</t>
 			</t>
 		</template>
 
-
-		<report id="account_invoices_plain" model="account.invoice"
-			string="Rechnungen für Briefpapier" report_type="qweb-pdf"
-			name="eq_plain_reports.report_invoice_plain" file="eq_plain_reports.report_invoice_plain"
+		<report id="sale_order_plain" model="sale.order"
+			string="Angebot / Bestellung für Briefpapier" report_type="qweb-pdf"
+			name="eq_plain_reports.report_sale_order_plain" file="eq_plain_reports.report_sale_order_plain"
 			attachment_use="True" />
 	</data>
 </openerp>
