--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -9,7 +9,7 @@
 				<div class="col-xs-5">
 					<table style="width:100%;float:right">
 						<tbody>
-							<tr>
+							<tr t-if="o.partner_id.eq_customer_ref">
 								<td>
 									<span>Customer no.</span>
 								</td>
@@ -17,7 +17,7 @@
 									<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref" />
 								</td>
 							</tr>
-							<tr>
+							<tr t-if="o.client_order_ref">
 								<td>
 									<span>Your reference no.</span>
 								</td>
@@ -206,19 +206,19 @@
 						</div>
 					</div>
 					<div class="col-xs-5">
-						<h class="contactpersonheader" t-if="o.user_id.eq_employee_id">
+						<h class="contactpersonheader" t-if="o.user_id">
 							<strong>For further information, please contact</strong>
 						</h>
-						<h style="line-height:0.5cm" t-if="o.user_id.eq_employee_id">
+						<h style="line-height:0.5cm" t-if="o.user_id">
 						</h>
-						<table style="width:100%;" t-if="o.user_id.eq_employee_id">
+						<table style="width:100%;" t-if="o.user_id">
 							<tbody>
 								<tr>
 									<td>
 										<span>Contact person</span>
 									</td>
 									<td class="text-right">
-										<span t-field="o.user_id.eq_employee_id.name" />
+										<span t-field="o.user_id.name" />
 									</td>
 								</tr>
 								<tr>
@@ -226,22 +226,22 @@
 										<span>Phone</span>
 									</td>
 									<td class="text-right">
-										<span t-field="o.user_id.eq_employee_id.work_phone" />
+										<span t-field="o.user_id.phone" />
 									</td>
 								</tr>
-								<tr t-if="o.user_id.eq_employee_id.eq_work_fax">
+								<tr t-if="o.user_id.fax">
 									<td>
 										<span>Fax</span>
 									</td>
 									<td class="text-right">
-										<span t-field="o.user_id.eq_employee_id.eq_work_fax" />
+										<span t-field="o.user_id.fax" />
 									</td>
 								</tr>
 								<tr>
 									<td colspan="2">
 										<span>E-Mail</span>
 										<div style="float:right;">
-											<span t-field="o.user_id.eq_employee_id.work_email" />
+											<span t-field="o.user_id.login" />
 										</div>
 									</td>
 								</tr>
