--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -31,7 +31,7 @@
 									<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref" />
 								</td>
 							</tr>
-							<tr t-if="o.name">
+							<tr t-if="o.eq_ref_number">
 								<td>
 									<span>Your reference no.</span>
 								</td>
