--- a/equitania/views/eq_report_stockpicking_return.xml
+++ b/equitania/views/eq_report_stockpicking_return.xml
@@ -45,7 +45,6 @@
 									<td class="text-right" t-if="o.date">
 										<span
 											t-esc="o.date.split(' ')[0].split('-')[2] + '.' + o.date.split(' ')[0].split('-')[1] + '.' + o.date.split(' ')[0].split('-')[0]" />
-
 									</td>
 								</tr>
 								<tr t-if="o.date_done and o.state == 'done'">
@@ -116,267 +115,260 @@
 
 		<!-- definition of report -->
 		<template id="eq_report_stockpicking_return_data" active="True">
-			<t t-call="report.html_container">
-				<t t-foreach="docs" t-as="o">
-					<t t-call="equitania.external_layout_return_picking">
-						<div class="page">
-							<div class="oe_structure" />
-							<div class="row">
-								<div class="col-xs-7 addressmargin">
-									<div t-if="o.picking_type_id.code=='incoming' and o.partner_id">
-										<!-- <span> <strong>Supplier Address:</strong> </span> -->
-										<div class="row col-xs-12 returnaddress">
-											<h t-field="o.partner_id.name" style="clear:left;" />
-											-
-											<h t-field="o.partner_id.street" />
-											-
-											<h t-field="o.partner_id.zip" />
-											<h>&#xa0;</h>
-											<h t-field="o.partner_id.city" />
-											-
-											<h t-field="o.partner_id.country_id.name" />
-										</div>
-									</div>
-									<div t-if="o.picking_type_id.code=='internal' and o.partner_id">
-										<span>
-											<strong>Warehouse Address:</strong>
-										</span>
-									</div>
-									<div t-if="o.picking_type_id.code=='outgoing' and o.partner_id">
-										<div class="row col-xs-12 returnaddress">
-											<h t-field="o.partner_id.name" style="clear:left;" />
-											-
-											<h t-field="o.partner_id.street" />
-											-
-											<h t-field="o.partner_id.zip" />
-											<h>&#xa0;</h>
-											<h t-field="o.partner_id.city" />
-											-
-											<h t-field="o.partner_id.country_id.name" />
-										</div>
-									</div>
-									<div t-if="o.partner_id" name="partner_header">
-										<div t-field="o.company_id.partner_id.name" style="clear:left;" />
-										<div t-if="o.company_id.partner_id.eq_name2" t-field="o.company_id.partner_id.eq_name2"
+			<div class="page">
+				<div class="oe_structure" />
+				<div class="row">
+					<div class="col-xs-7 addressmargin">
+						<div t-if="o.picking_type_id.code=='incoming' and o.partner_id">
+							<!-- <span> <strong>Supplier Address:</strong> </span> -->
+							<div class="row col-xs-12 returnaddress">
+								<h t-field="o.partner_id.name" style="clear:left;" />
+								-
+								<h t-field="o.partner_id.street" />
+								-
+								<h t-field="o.partner_id.zip" />
+								<h>&#xa0;</h>
+								<h t-field="o.partner_id.city" />
+								-
+								<h t-field="o.partner_id.country_id.name" />
+							</div>
+						</div>
+						<div t-if="o.picking_type_id.code=='internal' and o.partner_id">
+							<span>
+								<strong>Warehouse Address:</strong>
+							</span>
+						</div>
+						<div t-if="o.picking_type_id.code=='outgoing' and o.partner_id">
+							<div class="row col-xs-12 returnaddress">
+								<h t-field="o.partner_id.name" style="clear:left;" />
+								-
+								<h t-field="o.partner_id.street" />
+								-
+								<h t-field="o.partner_id.zip" />
+								<h>&#xa0;</h>
+								<h t-field="o.partner_id.city" />
+								-
+								<h t-field="o.partner_id.country_id.name" />
+							</div>
+						</div>
+						<div t-if="o.partner_id" name="partner_header">
+							<div t-field="o.company_id.partner_id.name" style="clear:left;" />
+							<div t-if="o.company_id.partner_id.eq_name2" t-field="o.company_id.partner_id.eq_name2"
+								style="clear:left;" />
+							<div>
+								<span t-field="o.company_id.partner_id.street" />
+								<span t-if="o.company_id.partner_id.eq_house_no" t-field="o.company_id.partner_id.eq_house_no"
+									style="margin-left:0.1cm;" />
+							</div>
+							<div t-if="o.company_id.partner_id.street2">
+								<div t-field="o.company_id.partner_id.street2" />
+							</div>
+							<h>
+								<h t-field="o.company_id.partner_id.zip" />
+								<h>&#xa0;</h>
+								<h t-field="o.company_id.partner_id.city" />
+								<h t-if="o.company_id.partner_id.eq_citypart">
+									-
+									<h t-field="o.company_id.partner_id.eq_citypart" />
+								</h>
+							</h>
+							<h t-field="o.company_id.partner_id.country_id.name" />
+						</div>
+					</div>
+					<div class="col-xs-5">
+					</div>
+				</div>
+				<h2 style="margin-bottom:25px; margin-top:25px">
+					Delivery return
+					<span t-field="o.name" />
+				</h2>
+				<table class="table table-condensed">
+					<thead>
+						<tr>
+							<th>
+								<strong>
+									Our reference no.
+								</strong>
+							</th>
+							<th>
+								<strong>Status</strong>
+							</th>
+
+							<th name="td_sched_date_h" t-if="not o.state == 'done'">
+								<strong>
+									Scheduled date
+								</strong>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								<span t-field="o.origin" />
+							</td>
+							<td>
+								<span t-field="o.state" />
+							</td>
+
+							<td t-if="not o.date" />
+							<td name="td_sched_date" t-if="o.min_date and not o.state == 'done'">
+								<span
+									t-esc="o.min_date.split(' ')[0].split('-')[2] + '.' + o.min_date.split(' ')[0].split('-')[1] + '.' + o.min_date.split(' ')[0].split('-')[0]" />
+
+							</td>
+							<td t-if="not o.min_date" />
+						</tr>
+					</tbody>
+				</table>
+				<br />
+				<br />
+				<table class="table table-condensed" id="move_lines">
+					<thead>
+						<tr>
+							<th>
+								<strong>Seq</strong>
+							</th>
+							<th style="min-width:2.6cm;">
+								<strong>Item no.</strong>
+							</th>
+							<th>
+								<strong>Item description</strong>
+							</th>
+							<th class="text-right" style="min-width:1.8cm;">
+								<strong>Qty.</strong>
+							</th>
+							<t t-if="o.picking_type_id.code != 'incoming'">
+								<th>
+									<strong>Source</strong>
+								</th>
+							</t>
+							<th>
+								<strong>Barcode</strong>
+							</th>
+							<t t-if="o.picking_type_id.code != 'outgoing'">
+								<th>
+									<strong>Destination</strong>
+								</th>
+							</t>
+						</tr>
+					</thead>
+					<tbody>
+						<tr t-foreach="o.move_lines" t-as="move">
+							<td>
+								<!-- pos no from contract -->
+								<t t-esc="move.eq_pos_no" />
+							</td>
+							<td>
+								<span t-field="move.product_id" />
+							</td>
+							<td id="eq_drawing_number" />
+							<td class="text-right">
+								<span t-esc="get_qty(move.product_uom_qty, o.partner_id.lang)" />
+								<span t-field="move.product_uom" groups="product.group_uom" />
+							</td>
+							<t t-if="o.picking_type_id.code != 'incoming'">
+								<td>
+									<span t-field="move.location_id" />
+								</td>
+							</t>
+							<td>
+								<span t-if="move.product_id and move.product_id.ean13">
+									<img
+										t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)"
+										style="width:300px;height:50px" />
+								</span>
+							</td>
+							<t t-if="o.picking_type_id.code != 'outgoing'">
+								<td>
+									<span t-field="move.location_dest_id" />
+								</td>
+							</t>
+						</tr>
+					</tbody>
+				</table>
+				<div name="invoice_partner"
+					t-if="o.picking_type_id.code == 'outgoing' and o.sale_id and o.sale_id.partner_invoice_id"
+					style="clear:both;">
+					<table style="width:auto!important; max-width:90%;">
+						<tbody>
+							<tr>
+								<td style="padding-right:0.5cm; vertical-align:top;">
+									<span style="font-weight:bold;">Invoice address:</span>
+								</td>
+								<td>
+									<!-- <div t-field="o.sale_id.partner_invoice_id" t-field-options="{&quot;widget&quot;: 
+										&quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], 
+										&quot;no_marker&quot;: true}" /> -->
+									<!-- wenn keine Person (Rechnungsadresse ist kein Kontakt) -->
+									<div t-if="o.sale_id.partner_invoice_id.type != 'contact'">
+										<div t-field="o.sale_id.partner_invoice_id.name" style="clear:left;" />
+										<div t-if="o.sale_id.partner_invoice_id.eq_name2" t-field="o.sale_id.partner_invoice_id.eq_name2"
 											style="clear:left;" />
 										<div>
-											<span t-field="o.company_id.partner_id.street" />
-											<span t-if="o.company_id.partner_id.eq_house_no"
-												t-field="o.company_id.partner_id.eq_house_no" style="margin-left:0.1cm;" />
+											<span t-field="o.sale_id.partner_invoice_id.street" />
+											<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
+												t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;" />
 										</div>
-										<div t-if="o.company_id.partner_id.street2">
-											<div t-field="o.company_id.partner_id.street2" />
+										<div t-if="o.sale_id.partner_invoice_id.street2">
+											<div t-field="o.sale_id.partner_invoice_id.street2" />
 										</div>
 										<h>
-											<h t-field="o.company_id.partner_id.zip" />
+											<h t-field="o.sale_id.partner_invoice_id.zip" />
 											<h>&#xa0;</h>
-											<h t-field="o.company_id.partner_id.city" />
-											<h t-if="o.company_id.partner_id.eq_citypart">
+											<h t-field="o.sale_id.partner_invoice_id.city" />
+										</h>
+										<div t-field="o.sale_id.partner_invoice_id.country_id.name" />
+									</div>
+									<!-- Rechnungsadresse IST Kontakt -->
+									<div t-if="o.sale_id.partner_invoice_id.type == 'contact'">
+										<div t-field="o.sale_id.partner_invoice_id.parent_id.name"
+											style="clear:left;" />
+										<div t-if="o.sale_id.partner_invoice_id.parent_id.eq_name2"
+											t-field="o.sale_id.partner_invoice_id.parent_id.eq_name2"
+											style="clear:left;" />
+										<span t-field="o.sale_id.partner_invoice_id.title.name" />
+										<span t-field="o.sale_id.partner_invoice_id.eq_firstname"
+											style="clear:left;" />
+										<span t-field="o.sale_id.partner_invoice_id.name" style="clear:left;" />
+										<div>
+											<span t-field="o.sale_id.partner_invoice_id.street" />
+											<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
+												t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;" />
+										</div>
+										<div t-if="o.sale_id.partner_invoice_id.street2">
+											<div t-field="o.sale_id.partner_invoice_id.street2" />
+										</div>
+										<h>
+											<h t-field="o.sale_id.partner_invoice_id.zip" />
+											<h>&#xa0;</h>
+											<h t-field="o.sale_id.partner_invoice_id.city" />
+											<h t-if="o.sale_id.partner_invoice_id.eq_citypart">
 												-
-												<h t-field="o.company_id.partner_id.eq_citypart" />
+												<h t-field="o.sale_id.partner_invoice_id.eq_citypart" />
 											</h>
 										</h>
-										<h t-field="o.company_id.partner_id.country_id.name" />
+										<div t-field="o.sale_id.partner_invoice_id.country_id.name" />
 									</div>
-								</div>
-								<div class="col-xs-5">
-								</div>
-							</div>
-							<h2 style="margin-bottom:25px; margin-top:25px">
-								Delivery return
-								<span t-field="o.name" />
-							</h2>
-							<table class="table table-condensed">
-								<thead>
-									<tr>
-										<th>
-											<strong>
-												Our reference no.
-											</strong>
-										</th>
-										<th>
-											<strong>Status</strong>
-										</th>
-
-										<th name="td_sched_date_h" t-if="not o.state == 'done'">
-											<strong>
-												Scheduled date
-											</strong>
-										</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>
-											<span t-field="o.origin" />
-										</td>
-										<td>
-											<span t-field="o.state" />
-										</td>
-
-										<td t-if="not o.date" />
-										<td name="td_sched_date" t-if="o.min_date and not o.state == 'done'">
-											<span
-												t-esc="o.min_date.split(' ')[0].split('-')[2] + '.' + o.min_date.split(' ')[0].split('-')[1] + '.' + o.min_date.split(' ')[0].split('-')[0]" />
-
-										</td>
-										<td t-if="not o.min_date" />
-									</tr>
-								</tbody>
-							</table>
-							<br />
-							<br />
-							<table class="table table-condensed" id="move_lines">
-								<thead>
-									<tr>
-										<th>
-											<strong>Seq</strong>
-										</th>
-										<th style="min-width:2.6cm;">
-											<strong>Item no.</strong>
-										</th>
-										<th>
-											<strong>Item description</strong>
-										</th>
-										<th class="text-right" style="min-width:1.8cm;">
-											<strong>Qty.</strong>
-										</th>
-										<t t-if="o.picking_type_id.code != 'incoming'">
-											<th>
-												<strong>Source</strong>
-											</th>
-										</t>
-										<th>
-											<strong>Barcode</strong>
-										</th>
-										<t t-if="o.picking_type_id.code != 'outgoing'">
-											<th>
-												<strong>Destination</strong>
-											</th>
-										</t>
-									</tr>
-								</thead>
-								<tbody>
-									<tr t-foreach="o.move_lines" t-as="move">
-										<td>
-											<!-- pos no from contract -->
-											<t t-esc="move.eq_pos_no" />
-										</td>
-										<td>
-											<span t-field="move.product_id" />
-										</td>
-										<td id="eq_drawing_number" />
-										<td class="text-right">
-											<span t-esc="get_qty(move.product_uom_qty, o.partner_id.lang)" />
-											<span t-field="move.product_uom" groups="product.group_uom" />
-										</td>
-										<t t-if="o.picking_type_id.code != 'incoming'">
-											<td>
-												<span t-field="move.location_id" />
-											</td>
-										</t>
-										<td>
-											<span t-if="move.product_id and move.product_id.ean13">
-												<img
-													t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)"
-													style="width:300px;height:50px" />
-											</span>
-										</td>
-										<t t-if="o.picking_type_id.code != 'outgoing'">
-											<td>
-												<span t-field="move.location_dest_id" />
-											</td>
-										</t>
-									</tr>
-								</tbody>
-							</table>
-							<div name="invoice_partner"
-								t-if="o.picking_type_id.code == 'outgoing' and o.sale_id and o.sale_id.partner_invoice_id"
-								style="clear:both;">
-								<table style="width:auto!important; max-width:90%;">
-									<tbody>
-										<tr>
-											<td style="padding-right:0.5cm; vertical-align:top;">
-												<span style="font-weight:bold;">Invoice address:</span>
-											</td>
-											<td>
-												<!-- <div t-field="o.sale_id.partner_invoice_id" t-field-options="{&quot;widget&quot;: 
-													&quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], 
-													&quot;no_marker&quot;: true}" /> -->
-												<!-- wenn keine Person (Rechnungsadresse ist kein Kontakt) -->
-												<div t-if="o.sale_id.partner_invoice_id.type != 'contact'">
-													<div t-field="o.sale_id.partner_invoice_id.name" style="clear:left;" />
-													<div t-if="o.sale_id.partner_invoice_id.eq_name2"
-														t-field="o.sale_id.partner_invoice_id.eq_name2" style="clear:left;" />
-													<div>
-														<span t-field="o.sale_id.partner_invoice_id.street" />
-														<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
-															t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;" />
-													</div>
-													<div t-if="o.sale_id.partner_invoice_id.street2">
-														<div t-field="o.sale_id.partner_invoice_id.street2" />
-													</div>
-													<h>
-														<h t-field="o.sale_id.partner_invoice_id.zip" />
-														<h>&#xa0;</h>
-														<h t-field="o.sale_id.partner_invoice_id.city" />
-													</h>
-													<div t-field="o.sale_id.partner_invoice_id.country_id.name" />
-												</div>
-												<!-- Rechnungsadresse IST Kontakt -->
-												<div t-if="o.sale_id.partner_invoice_id.type == 'contact'">
-													<div t-field="o.sale_id.partner_invoice_id.parent_id.name"
-														style="clear:left;" />
-													<div t-if="o.sale_id.partner_invoice_id.parent_id.eq_name2"
-														t-field="o.sale_id.partner_invoice_id.parent_id.eq_name2"
-														style="clear:left;" />
-													<span t-field="o.sale_id.partner_invoice_id.title.name" />
-													<span t-field="o.sale_id.partner_invoice_id.eq_firstname"
-														style="clear:left;" />
-													<span t-field="o.sale_id.partner_invoice_id.name"
-														style="clear:left;" />
-													<div>
-														<span t-field="o.sale_id.partner_invoice_id.street" />
-														<span t-if="o.sale_id.partner_invoice_id.eq_house_no"
-															t-field="o.sale_id.partner_invoice_id.eq_house_no" style="margin-left:0.1cm;" />
-													</div>
-													<div t-if="o.sale_id.partner_invoice_id.street2">
-														<div t-field="o.sale_id.partner_invoice_id.street2" />
-													</div>
-													<h>
-														<h t-field="o.sale_id.partner_invoice_id.zip" />
-														<h>&#xa0;</h>
-														<h t-field="o.sale_id.partner_invoice_id.city" />
-														<h t-if="o.sale_id.partner_invoice_id.eq_citypart">
-															-
-															<h t-field="o.sale_id.partner_invoice_id.eq_citypart" />
-														</h>
-													</h>
-													<div t-field="o.sale_id.partner_invoice_id.country_id.name" />
-												</div>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<div style="display:inline-block;">
-								<table style="margin-top:0.5cm;">
-									<tr>
-										<td>Goods received on date:</td>
-									</tr>
-									<tr>
-										<td style="width:5cm; height:1.5cm; border-bottom: 1px solid #000;"></td>
-									</tr>
-									<tr>
-										<td>Signature</td>
-									</tr>
-								</table>
-							</div>
-							<div class="oe_structure" />
-						</div>
-					</t>
-				</t>
-			</t>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div style="display:inline-block;">
+					<table style="margin-top:0.5cm;">
+						<tr>
+							<td>Goods received on date:</td>
+						</tr>
+						<tr>
+							<td style="width:5cm; height:1.5cm; border-bottom: 1px solid #000;"></td>
+						</tr>
+						<tr>
+							<td>Signature</td>
+						</tr>
+					</table>
+				</div>
+				<div class="oe_structure" />
+			</div>
 		</template>
 
 		<template id="eq_report_stockpicking_return" active="True">
