--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -205,7 +205,7 @@
 							<div t-field="o.partner_id.country_id.name" />
 						</div>
 					</div>
-					<div class="col-xs-5">
+					<div class="col-xs-5 headerdata2">
 						<h class="contactpersonheader" t-if="o.user_id">
 							<strong>For further information, please contact</strong>
 						</h>
