--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <openerp>
 	<data>
 		<!-- header data -->
@@ -201,7 +202,7 @@
 							<div t-field="o.partner_id.country_id.name" />
 						</div>
 					</div>
-					<div class="col-xs-5">
+					<div class="col-xs-5 headerdata2">
 						<h class="contactpersonheader" t-if="o.user_id">
 							<strong>For further information, please contact</strong>
 						</h>
@@ -243,7 +244,7 @@
 						</table>
 					</div>
 				</div>
-				<h2>
+				<h2 class="reporttitle">
 					<span
 						t-if="o.type == 'out_invoice' and (o.state == 'open' or o.state == 'paid')">Invoice</span>
 					<span t-if="o.type == 'out_invoice' and o.state == 'proforma2'">Pro-forma invoice</span>
@@ -427,8 +428,7 @@
 									</td>
 									<td class="text-right" t-if="o.invoice_line[0].invoice_line_tax_id">
 										<strong>
-											<span
-												t-esc="', '.join(map(lambda x: x.name, o.invoice_line[0].invoice_line_tax_id))" />
+											<span t-esc="', '.join(map(lambda x: x.name, o.invoice_line[0].invoice_line_tax_id))" />
 										</strong>
 									</td>
 									<td class="text-right">
