--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -365,7 +365,7 @@
 						</tbody>
 					</table>
 				</div>
-				<div style="display:inline-block;">
+				<div style="display:inline-block;" id="signature_block">
 					<table style="margin-top:0.5cm;">
 						<tr>
 							<td>Goods received on date:</td>
