--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -119,17 +119,17 @@
 						</div>
 						<div t-if="o.picking_type_id.code=='outgoing' and o.partner_id">
 							<div class="row col-xs-12 returnaddress">
-								<h t-field="o.company_id.partner_id.name" />
+								<h t-field="o.company_id.name" />
 								-
-								<h t-field="o.company_id.partner_id.street" />
-								<span t-if="o.company_id.partner_id.eq_house_no">
+								<h t-field="o.company_id.street" />
+								<span t-if="o.company_id.eq_house_no">
 									<h>&#xa0;</h>
-									<span t-field="o.company_id.partner_id.eq_house_no" />
+									<span t-field="o.company_id.eq_house_no" />
 								</span>
 								-
-								<h t-field="o.company_id.partner_id.zip" />
+								<h t-field="o.company_id.zip" />
 								<h>&#xa0;</h>
-								<h t-field="o.company_id.partner_id.city" />
+								<h t-field="o.company_id.city" />
 							</div>
 							<!--<span><strong>Customer Address:</strong></span> -->
 						</div>
