--- a/equitania/sale_layout/views/sale_layout_category_view.xml
+++ b/equitania/sale_layout/views/sale_layout_category_view.xml
@@ -39,9 +39,15 @@
             <field name="inherit_id" ref="account.view_invoice_line_form"/>
             <field name="arch" type="xml">
                 <data>
+                
+                <xpath expr="//group/group/field[@name='product_id']" position="before">
+                        <field name="sequence" string="Pos"/>
+                    </xpath>  
+                    
                     <xpath expr="//group/group/field[@name='product_id']" position="after">
                         <field name="sale_layout_cat_id"/>
-                    </xpath>                                                       
+                    </xpath>
+                                                                          
                 </data>
             </field>
         </record>
