[CHG] Lieferschein-Report um eine ID erweitert und einen fixen Abstand ersetzt

--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -174,7 +174,7 @@
 					<span t-field="o.name" />
 
 				</h2>
-				<table class="table table-condensed">
+				<table class="table table-condensed" style="margin-bottom:30px;" id="maincontent">
 					<thead>
 						<tr>
 							<th>
@@ -228,8 +228,6 @@
 						</tr>
 					</tbody>
 				</table>
-				<br />
-				<br />
 				<table class="table table-condensed" id="move_lines">
 					<thead>
 						<tr>
