[CHG] Einkaufsreport auf die neuen Templates umgestellt +  kleine Bugfix für die FrameworkAgreements

--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -101,6 +101,9 @@
 	  background-color:red!important;
 	   display:none!important; 
 	} 
+	ul, ol {
+		margin-left:0.6cm;
+	}
 </template>
 </data>
 </openerp>
