--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -322,9 +322,8 @@
 										<t id="eq_drawing_number" />
 										<t t-if="o.state not in ['draft','sent']">
 											<t t-if="o.show_delivery_date">
-												<span>
+												<span class="clearfix">
 													<strong>
-														<br />
 														Delivery date:
 														<span t-field="line.get_delivery_date" />
 													</strong>
