--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -194,6 +194,11 @@
 				<p t-if="o.eq_head_text" style="margin-bottom:0.3cm!important;">
 					<span t-field="o.eq_head_text" />
 				</p>
+				
+				<!-- Pagebreak after headertext -->
+				<p t-if="o.eq_use_page_break_after_header" style="page-break-after:always;"> </p>
+				
+				
 				<table class="table table-condensed">
 					<thead>
 						<tr>
