[FIX] Die Lieferanschrift in der Rechnung und dem Angebot/Auftrag angepasst.

--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -498,8 +498,8 @@
 								<td style="padding-bottom:0.3cm; padding-bottom:0.3cm;">
 									<!-- wenn die Anschrift keine Person ist (Lieferadresse ist kein Kontakt) -->
 									<div t-if="o.eq_delivery_address.type != 'contact'">
-										<div t-if="o.eq_delivery_address.parent_id.name" t-field="o.eq_delivery_address.parent_id.name" style="clear:left;" />
-										<div t-if="o.eq_delivery_addres.parent_ids.eq_name2" t-field="o.eq_delivery_address.eq_name2"
+										<div t-if="o.eq_delivery_address.name" t-field="o.eq_delivery_address.name" style="clear:left;" />
+										<div t-if="o.eq_delivery_address.eq_name2" t-field="o.eq_delivery_address.eq_name2"
 											style="clear:left;" />
 										<div>
 											<span t-field="o.eq_delivery_address.street" />
@@ -523,11 +523,11 @@
 									<!-- wenn die Anschrift eine Person ist (Lieferadresse IST ein Kontakt) -->
 									<div t-if="o.eq_delivery_address.type == 'contact'">
 										<div t-if="o.eq_delivery_address.parent_id.name" t-field="o.eq_delivery_address.parent_id.name" style="clear:left;" />
-										<div t-if="o.eq_delivery_address.parent_id.eq_name2" t-field="o.eq_delivery_address.eq_name2"
+										<div t-if="o.eq_delivery_address.parent_id.eq_name2" t-field="o.eq_delivery_address.parent_id.eq_name2"
 											style="clear:left;" />
-									<span t-field="o.eq_delivery_address.title.name" />
-									<span t-field="o.eq_delivery_address.eq_firstname" style="clear:left;" />
-									<span t-field="o.eq_delivery_address.name" style="clear:left;" />
+											<span t-field="o.eq_delivery_address.title.name" />
+											<span t-field="o.eq_delivery_address.eq_firstname" style="clear:left;" />
+											<span t-field="o.eq_delivery_address.name" style="clear:left;" />
 										<div>
 											<span t-field="o.eq_delivery_address.street" />
 											<span t-if="o.eq_delivery_address.eq_house_no" t-field="o.eq_delivery_address.eq_house_no"
