--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -542,7 +542,7 @@
 									Shipping address:
 								</td>
 								<td style="padding-bottom:0.3cm;">
-									<div>
+									<div t-if="o.partner_shipping_id.type != 'contact'">
 										<div t-field="o.partner_shipping_id.name" style="clear:left;" />
 										<div t-if="o.partner_shipping_id.eq_name2" t-field="o.partner_shipping_id.eq_name2"
 											style="clear:left;" />
@@ -558,6 +558,33 @@
 											<h t-field="o.partner_shipping_id.zip" />
 											<h>&#xa0;</h>
 											<h t-field="o.partner_shipping_id.city" />
+										</h>
+										<div t-field="o.partner_shipping_id.country_id.name" />
+									</div>
+									
+									<!-- wenn die Anschrift eine Person ist (Lieferadresse IST ein Kontakt) -->
+									<div t-if="o.partner_shipping_id.type == 'contact'">
+										<div t-if="o.partner_shipping_id.parent_id.name" t-field="o.partner_shipping_id.parent_id.name" style="clear:left;" />
+										<div t-if="o.partner_shipping_id.parent_id.eq_name2" t-field="o.partner_shipping_id.parent_id.eq_name2"
+											style="clear:left;" />
+											<span t-field="o.partner_shipping_id.title.name" />
+											<span t-field="o.partner_shipping_id.eq_firstname" style="clear:left;" />
+											<span t-field="o.partner_shipping_id.name" style="clear:left;" />
+										<div>
+											<span t-field="o.partner_shipping_id.street" />
+											<span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no"
+												style="margin-left:0.1cm;" />
+										</div>
+										<div t-if="o.partner_shipping_id.street2">
+											<div t-field="o.partner_shipping_id.street2" />
+										</div>
+										<h>
+											<h t-field="o.partner_shipping_id.zip" />
+											<h t-field="o.partner_shipping_id.city" />
+											<h t-if="o.partner_shipping_id.eq_citypart">
+												-
+												<h t-field="o.partner_shipping_id.eq_citypart" />
+											</h>
 										</h>
 										<div t-field="o.partner_shipping_id.country_id.name" />
 									</div>
