--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -114,29 +114,26 @@
 						<div class="row col-xs-12 returnaddress">
 							<h t-field="o.company_id.name" />
 							-
-							<h t-field="o.company_id.street" />
+							<span t-field="o.company_id.street" />
 							<span t-if="o.company_id.eq_house_no">
 								<span t-field="o.company_id.eq_house_no" />
 							</span>
 							-
-							<h t-field="o.company_id.zip" />
-							<h>&#xa0;</h>
-							<h t-field="o.company_id.city" />
+							<span t-field="o.company_id.zip" />
+							<span t-field="o.company_id.city" />
 						</div>
 						<div t-field="o.partner_id.name" style="clear:left;" />
 						<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2"
 							style="clear:left;" />
 						<div>
 							<span t-field="o.partner_id.street" />
-							<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"
-								style="margin-left:0.1cm;" />
+							<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
 						</div>
 						<div t-if="o.partner_id.street2">
 							<div t-field="o.partner_id.street2" />
 						</div>
 						<h>
 							<h t-field="o.partner_id.zip" />
-							<h>&#xa0;</h>
 							<h t-field="o.partner_id.city" />
 							<h t-if="o.partner_id.eq_citypart">
 								-
@@ -287,15 +284,13 @@
 													<span t-field="o.picking_type_id.warehouse_id.partner_id.street" />
 													<span
 														t-if="o.picking_type_id.warehouse_id.partner_id.eq_house_no"
-														t-field="o.picking_type_id.warehouse_id.partner_id.eq_house_no"
-														style="margin-left:0.1cm;" />
+														t-field="o.picking_type_id.warehouse_id.partner_id.eq_house_no" />
 												</div>
 												<div t-if="o.picking_type_id.warehouse_id.partner_id.street2">
 													<div t-field="o.picking_type_id.warehouse_id.partner_id.street2" />
 												</div>
 												<h t-if="o.picking_type_id.warehouse_id.partner_id.zip">
 													<h t-field="o.picking_type_id.warehouse_id.partner_id.zip" />
-													<h>&#xa0;</h>
 													<h t-field="o.picking_type_id.warehouse_id.partner_id.city" />
 													<h t-if="o.picking_type_id.warehouse_id.partner_id.eq_citypart">
 														-
