--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -146,7 +146,7 @@
 						<div class="row col-xs-12 returnaddress">
 							<h t-field="o.company_id.name" />
 							-
-							<h t-field="o.company_id.street" />
+							<span t-field="o.company_id.street" />
 							<span t-if="o.company_id.eq_house_no">
 								<span t-field="o.company_id.eq_house_no" />
 							</span>
@@ -160,8 +160,7 @@
 								style="clear:left;" />
 							<div>
 								<span t-field="o.partner_id.street" />
-								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"
-									style="margin-left:0.1cm;" />
+								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
 							</div>
 							<div t-if="o.partner_id.street2">
 								<div t-field="o.partner_id.street2" />
@@ -185,8 +184,7 @@
 							<span t-field="o.partner_id.name" style="clear:left;" />
 							<div>
 								<span t-field="o.partner_id.street" />
-								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"
-									style="margin-left:0.1cm;" />
+								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
 							</div>
 							<div t-if="o.partner_id.street2">
 								<div t-field="o.partner_id.street2" />
