--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -99,19 +99,19 @@
                 <div class="row col-xs-12 returnaddress">
                     <h t-field="o.company_id.name"/> -
 					<h t-field="o.company_id.street"/><span t-if="o.company_id.eq_house_no"> <span t-field="o.company_id.eq_house_no"/></span> -
-                    <h t-field="o.company_id.zip"/><h>&#xa0;</h>
+                    <h t-field="o.company_id.zip"/>
                     <h t-field="o.company_id.city"/>
                 </div>
                 <div t-field="o.partner_id.name" style="clear:left;"/>
                    <div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2" style="clear:left;"/>
 				<div>
-					<span t-field="o.partner_id.street"/><span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" style="margin-left:0.1cm;"/>
+					<span t-field="o.partner_id.street"/><span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"/>
 				</div>
                 <div t-if="o.partner_id.street2">
                     <div t-field="o.partner_id.street2"/>
                 </div>
                 <h>
-                    <h t-field="o.partner_id.zip"/><h>&#xa0;</h>
+                    <h t-field="o.partner_id.zip"/>
                     <h t-field="o.partner_id.city"/>
 					<h t-if="o.partner_id.eq_citypart">-
 						<h t-field="o.partner_id.eq_citypart"/>
@@ -322,13 +322,13 @@
 			                    		<div t-field="o.picking_type_id.warehouse_id.partner_id.name"/>
 			                    		<div t-if="o.picking_type_id.warehouse_id.partner_id.eq_name2" t-field="o.picking_type_id.warehouse_id.partner_id.eq_name2"/>
 			                            <div>
-											<span t-field="o.picking_type_id.warehouse_id.partner_id.street"/><span t-if="o.picking_type_id.warehouse_id.partner_id.eq_house_no" t-field="o.picking_type_id.warehouse_id.partner_id.eq_house_no" style="margin-left:0.1cm;"/>
+											<span t-field="o.picking_type_id.warehouse_id.partner_id.street"/><span t-if="o.picking_type_id.warehouse_id.partner_id.eq_house_no" t-field="o.picking_type_id.warehouse_id.partner_id.eq_house_no" />
 										</div>
 						                <div t-if="o.picking_type_id.warehouse_id.partner_id.street2">
 						                    <div t-field="o.picking_type_id.warehouse_id.partner_id.street2"/>
 						                </div>
 						                <h t-if="o.picking_type_id.warehouse_id.partner_id.zip">
-						                    <h t-field="o.picking_type_id.warehouse_id.partner_id.zip"/><h>&#xa0;</h>
+						                    <h t-field="o.picking_type_id.warehouse_id.partner_id.zip"/>
 						                    <h t-field="o.picking_type_id.warehouse_id.partner_id.city"/>
 											<h t-if="o.picking_type_id.warehouse_id.partner_id.eq_citypart">-
 												<h t-field="o.picking_type_id.warehouse_id.partner_id.eq_citypart"/>
