--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -152,7 +152,6 @@
 							</span>
 							-
 							<h t-field="o.company_id.zip" />
-							<h>&#xa0;</h>
 							<h t-field="o.company_id.city" />
 						</div>
 						<div t-if="o.partner_id.is_company">
@@ -161,15 +160,13 @@
 								style="clear:left;" />
 							<div>
 								<span t-field="o.partner_id.street" />
-								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"
-									style="margin-left:0.1cm;" />
+								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
 							</div>
 							<div t-if="o.partner_id.street2">
 								<div t-field="o.partner_id.street2" />
 							</div>
 							<h>
 								<h t-field="o.partner_id.zip" />
-								<h>&#xa0;</h>
 								<h t-field="o.partner_id.city" />
 								<h t-if="o.partner_id.eq_citypart">
 									-
@@ -187,15 +184,13 @@
 							<span t-field="o.partner_id.name" style="clear:left;" />
 							<div>
 								<span t-field="o.partner_id.street" />
-								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"
-									style="margin-left:0.1cm;" />
+								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
 							</div>
 							<div t-if="o.partner_id.street2">
 								<div t-field="o.partner_id.street2" />
 							</div>
 							<h>
 								<h t-field="o.partner_id.zip" />
-								<h>&#xa0;</h>
 								<h t-field="o.partner_id.city" />
 								<h t-if="o.partner_id.eq_citypart">
 									-
@@ -427,12 +422,20 @@
 									<td class="text-right" id="price_netto">
 										<strong>Total without taxes</strong>
 									</td>
+									<!--  NEUE STEUERSPALTE -->
+									<td class="text-right" t-foreach="set([x.tax_id for x in o.order_line])" t-as="tax_line">
+										<strong>
+											<span t-esc="tax_line.name" />
+										</strong>
+									</td>
+									
+									<!--  ALTE STEUERSPALTE
 									<td class="text-right" t-if="o.order_line[0].tax_id">
 										<strong>
 											<span
 												t-esc="', '.join(map(lambda x: x.name, o.order_line[0].tax_id))" />
 										</strong>
-									</td>
+									</td>-->
 									<td class="text-right">
 										<strong>Total sum</strong>
 									</td>
@@ -444,10 +447,18 @@
 										<span
 											t-esc="get_standard_price(o.amount_untaxed, o.partner_id.lang, o.currency_id)" />
 									</td>
+									<!--  NEUE STEUERSPALTE -->
+									<td class="text-right" t-foreach="set([x.tax_id for x in o.order_line])" t-as="tax_line">
+										<strong>
+											<span
+										t-esc="get_standard_price(sum([x.eq_amount_tax for x in o.order_line if x.tax_id.id == tax_line.id]) * (o.eq_amount_net / o.amount_untaxed) if o.eq_amount_net and o.amount_untaxed else 1, o.partner_id.lang, o.currency_id)" />
+										</strong>
+									</td>
+									<!--  ALTE STeuerspalte
 									<td class="text-right" t-if="o.order_line[0].tax_id">
 										<span
 											t-esc="get_standard_price(o.amount_tax, o.partner_id.lang, o.currency_id)" />
-									</td>
+									</td>-->
 									<td class="text-right">
 										<span
 											t-esc="get_standard_price(o.amount_total, o.partner_id.lang, o.currency_id)" />
@@ -497,15 +508,13 @@
 												style="clear:left;" />
 											<div>
 												<span t-field="o.partner_invoice_id.street" />
-												<span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no"
-													style="margin-left:0.1cm;" />
+												<span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no" />
 											</div>
 											<div t-if="o.partner_invoice_id.street2">
 												<div t-field="o.partner_invoice_id.street2" />
 											</div>
 											<h>
 												<h t-field="o.partner_invoice_id.zip" />
-												<h>&#xa0;</h>
 												<h t-field="o.partner_invoice_id.city" />
 											</h>
 											<div t-field="o.partner_invoice_id.country_id.name" />
@@ -520,17 +529,15 @@
 											<span t-field="o.partner_invoice_id.name" style="clear:left;" />
 											<div>
 												<span t-field="o.partner_invoice_id.street" />
-												<span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no"
-													style="margin-left:0.1cm;" />
+												<span t-if="o.partner_invoice_id.eq_house_no" t-field="o.partner_invoice_id.eq_house_no" />
 											</div>
 											<div t-if="o.partner_invoice_id.street2">
 												<div t-field="o.partner_invoice_id.street2" />
 											</div>
-											<h>
-												<h t-field="o.partner_invoice_id.zip" />
-												<h>&#xa0;</h>
-												<h t-field="o.partner_invoice_id.city" />
-											</h>
+											<span>
+												<span t-field="o.partner_invoice_id.zip" />
+												<span t-field="o.partner_invoice_id.city" />
+											</span>
 											<div t-field="o.partner_invoice_id.country_id.name" />
 										</div>
 									</div>
@@ -548,17 +555,15 @@
 											style="clear:left;" />
 										<div>
 											<span t-field="o.partner_shipping_id.street" />
-											<span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no"
-												style="margin-left:0.1cm;" />
+											<span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no" />
 										</div>
 										<div t-if="o.partner_shipping_id.street2">
 											<div t-field="o.partner_shipping_id.street2" />
 										</div>
-										<h>
-											<h t-field="o.partner_shipping_id.zip" />
-											<h>&#xa0;</h>
-											<h t-field="o.partner_shipping_id.city" />
-										</h>
+										<span>
+											<span t-field="o.partner_shipping_id.zip" />
+											<span t-field="o.partner_shipping_id.city" />
+										</span>
 										<div t-field="o.partner_shipping_id.country_id.name" />
 									</div>
 									
@@ -572,8 +577,7 @@
 											<span t-field="o.partner_shipping_id.name" style="clear:left;" />
 										<div>
 											<span t-field="o.partner_shipping_id.street" />
-											<span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no"
-												style="margin-left:0.1cm;" />
+											<span t-if="o.partner_shipping_id.eq_house_no" t-field="o.partner_shipping_id.eq_house_no" />
 										</div>
 										<div t-if="o.partner_shipping_id.street2">
 											<div t-field="o.partner_shipping_id.street2" />
